--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>marshybristo</title>
+    <title>marshybistro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css>
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" style="color: #fff;" href="#">Marshy Bristo</a>
+            <a class="navbar-brand" style="color: #fff;" href="#">Marshy Bistro</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas accusamus tempore temporibus
                     rem amet laudantium animi optio voluptatum. Natus obcaecati unde porro nostrum ipsam itaque
                     impedit incidunt rem quisquam eos!</p>
-                <a href="" class="btn">order now</a>
+                <a href="" class="btn hoverbtn">order now</a>
             </div>
             <div class="image">
                 <img src="https://abuabz.github.io/marshycafe/image/images/logo1.jpeg" alt="">
@@ -65,7 +65,7 @@
     <section style="padding: 2rem 9%;">
         <div class="gallery" id="Gallery">
             <div class="heading">
-                <h1>Marshy Bristo</h1>
+                <h1>Marshy Bistro</h1>
                 <h5>Gallery</h5>
             </div>
             <div class="card-box">
@@ -76,7 +76,7 @@
                     <div class="content">
                         <h3>tasty food</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
-                        <a href="#Contact" class="btn">Contact now</a>
+                        <a href="#Contact" class="btn hoverbtn">Contact now</a>
                     </div>
                 </div>
 
@@ -143,7 +143,7 @@
         <div class="menu" id="Menu">
             <div class="menu-box">
                 <div class="heading">
-                    <h1>Marshy Bristo</h1>
+                    <h1>Marshy Bistro</h1>
                     <h5>menu</h5>
                 </div>
 
@@ -305,7 +305,7 @@
     <section style="padding: 2rem 9%;">
         <div class="time" id="Time">
             <div class="heading">
-                <h1>Marshy Bristo</h1>
+                <h1>Marshy Bistro</h1>
                 <h5>Time</h5>
             </div>
 
@@ -372,7 +372,7 @@
     <section class="lastsection">
         <div class="footer" id="Contact">
             <div class="heading">
-                <h1 style="color: white;">Marshy Bristo</h1>
+                <h1 style="color: white;">Marshy Bistro</h1>
                 <h5>Contact</h5>
             </div>
 
